--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background: #7cc6fe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  color: #fff;
+}
+
+.main {
+  background-color: black;
+  width: 450px;
+  min-height: 200px;
+  border-radius: 15px;
+  padding: 20px;
+  display: flex;
+
+}
+
+.quiz {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.question__section{
+  flex: 0 0 50%;
+}
+
+.question__count {
+  margin-bottom: 20px;
+}
+
+.question__count span {
+  font-size: 28px;
+}
+
+.question__text {
+  margin-bottom: 15px;
+}
+
+.answer__section {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  width: 100%;
+  color: #fff;
+  background-color: #252d4a;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 15px;
+  padding: 5px;
+  margin: 5px 0;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
